--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,5 +7,5 @@
     <input matInput placeholder="Password" formControlName = "password" required>
   </mat-form-field>
 
-  <button mat-button color="primary" (click)="signIn()">Primary</button>
+  <button mat-button color="primary" (click)="signIn()">Войти</button>
 </form>
