--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -23,11 +23,11 @@
 </mat-menu>
 
 <mat-list>
-  <mat-list-item>Item 1</mat-list-item>
+  <mat-list-item>{{user.name}}</mat-list-item>
   <mat-divider></mat-divider>
-  <mat-list-item>Item 2</mat-list-item>
+  <mat-list-item>{{account.id}}</mat-list-item>
   <mat-divider></mat-divider>
-  <mat-list-item>Item 3</mat-list-item>
+  <mat-list-item>{{account.value}}</mat-list-item>
 </mat-list>
 
 </form>
